# cookiecutter-smp-api

./: .gitignore  README.md  pyproject.toml
src/cookiecutter_smp_api/: main.py
src/cookiecutter_smp_api/api/: routes.py
src/cookiecutter_smp_api/models/: schema.py
src/cookiecutter_smp_api/services/: generator.py
