[project]
name = "cookiecutter-smp-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Mariia Steeghs-Turchina"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "cookiecutter (>=2.6.0,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
packages = [{include = "cookiecutter_smp_api", from = "src"}]

[tool.poetry.scripts]
cookiecutter-smp-api = "cookiecutter_smp_api.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
